# elder-alert

./: .env.example  .gitignore  CMakeLists.txt  README.md  package-lock.json  package.json  partitions.csv  sdkconfig  sdkconfig.defaults  server.js  引脚分配表.md  近期未验收项统一验收报告.md  风险判断与状态显示规则表_v1.md  风险状态使用说明.md
components/BSP/: CMakeLists.txt
components/BSP/AHT20/: AHT20.c  BSP_AHT20.h
components/BSP/Alert/: Alert.c  BSP_Alert.h
components/BSP/BH1750/: BH1750.c  BSP_BH1750.h
components/BSP/I2C/: BSP_I2C.c  BSP_I2C.h
components/BSP/INMP441/: BSP_INMP441.h  INMP441.c
components/BSP/KEY/: KEY.c  KEY.h
components/BSP/LD2410B/: BSP_LD2410B.h  LD2410B.c
components/BSP/MAX98357A/: BSP_MAX98357A.h  MAX98357A.c
components/BSP/MQ2/: BSP_MQ2.h  MQ2.c
components/BSP/OLED/: BSP_OLED.h  OLED.c
components/BSP/TFT/: BSP_TFT.h  TFT.c
main/: main.c  (+2 more)
openclaw_elder_alert_project/components/BSP/: CMakeLists.txt
openclaw_elder_alert_project/components/BSP/AHT20/: AHT20.c  BSP_AHT20.h
openclaw_elder_alert_project/components/BSP/AM312/: AM312.c  BSP_AM312.h
openclaw_elder_alert_project/components/BSP/Alert/: Alert.c  BSP_Alert.h
openclaw_elder_alert_project/components/BSP/BH1750/: BH1750.c  BSP_BH1750.h
openclaw_elder_alert_project/components/BSP/BMP280/: BMP280.c  BSP_BMP280.h
openclaw_elder_alert_project/components/BSP/I2C/: BSP_I2C.c  BSP_I2C.h
openclaw_elder_alert_project/components/BSP/INMP441/: BSP_INMP441.h
openclaw_elder_alert_project/components/BSP/KEY/: KEY.c  KEY.h
openclaw_elder_alert_project/components/BSP/LED/: LED.c  LED.h
openclaw_elder_alert_project/components/BSP/MQ2/: BSP_MQ2.h  MQ2.c
openclaw_elder_alert_project/components/BSP/OLED/: BSP_OLED.h  OLED.c
openclaw_elder_alert_project/components/Middlewares/: CMakeLists.txt
openclaw_elder_alert_project/components/Middlewares/AlertController/: AlertController.c  AlertController.h
openclaw_elder_alert_project/components/Middlewares/AppController/: AppController.c  AppController.h
openclaw_elder_alert_project/components/Middlewares/DisplayController/: DisplayController.c  DisplayController.h
openclaw_elder_alert_project/components/Middlewares/EventLog/: EventLog.c  EventLog.h
openclaw_elder_alert_project/components/Middlewares/HttpAlertReporter/: HttpAlertReporter.c  HttpAlertReporter.h
(+71 files in other folders)
